--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -252,6 +252,16 @@ jobs:
           tar -czf ../../libdatadog-aarch64-apple-darwin.tar.gz libdatadog-aarch64-apple-darwin/
           cd ../..
 
+          echo "=== Calculating SHA256 hashes ==="
+          SHA256_WIN_X64=$(sha256sum libdatadog-x64-windows.zip | cut -d' ' -f1)
+          SHA256_WIN_X86=$(sha256sum libdatadog-x86-windows.zip | cut -d' ' -f1)
+          SHA256_LINUX_X64_GNU=$(sha256sum libdatadog-x86_64-unknown-linux-gnu.tar.gz | cut -d' ' -f1)
+          SHA256_LINUX_X64_MUSL=$(sha256sum libdatadog-x86_64-alpine-linux-musl.tar.gz | cut -d' ' -f1)
+          SHA256_LINUX_ARM64_GNU=$(sha256sum libdatadog-aarch64-unknown-linux-gnu.tar.gz | cut -d' ' -f1)
+          SHA256_LINUX_ARM64_MUSL=$(sha256sum libdatadog-aarch64-alpine-linux-musl.tar.gz | cut -d' ' -f1)
+          SHA256_MACOS_X64=$(sha256sum libdatadog-x86_64-apple-darwin.tar.gz | cut -d' ' -f1)
+          SHA256_MACOS_ARM64=$(sha256sum libdatadog-aarch64-apple-darwin.tar.gz | cut -d' ' -f1)
+
           echo "=== Calculating SHA512 hashes ==="
           SHA512_WIN_X64=$(sha512sum libdatadog-x64-windows.zip | cut -d' ' -f1)
           SHA512_WIN_X86=$(sha512sum libdatadog-x86-windows.zip | cut -d' ' -f1)
@@ -262,6 +272,15 @@ jobs:
           SHA512_MACOS_X64=$(sha512sum libdatadog-x86_64-apple-darwin.tar.gz | cut -d' ' -f1)
           SHA512_MACOS_ARM64=$(sha512sum libdatadog-aarch64-apple-darwin.tar.gz | cut -d' ' -f1)
 
+          echo "SHA256_WIN_X64=$SHA256_WIN_X64" >> $GITHUB_OUTPUT
+          echo "SHA256_WIN_X86=$SHA256_WIN_X86" >> $GITHUB_OUTPUT
+          echo "SHA256_LINUX_X64_GNU=$SHA256_LINUX_X64_GNU" >> $GITHUB_OUTPUT
+          echo "SHA256_LINUX_X64_MUSL=$SHA256_LINUX_X64_MUSL" >> $GITHUB_OUTPUT
+          echo "SHA256_LINUX_ARM64_GNU=$SHA256_LINUX_ARM64_GNU" >> $GITHUB_OUTPUT
+          echo "SHA256_LINUX_ARM64_MUSL=$SHA256_LINUX_ARM64_MUSL" >> $GITHUB_OUTPUT
+          echo "SHA256_MACOS_X64=$SHA256_MACOS_X64" >> $GITHUB_OUTPUT
+          echo "SHA256_MACOS_ARM64=$SHA256_MACOS_ARM64" >> $GITHUB_OUTPUT
+
           echo "SHA512_WIN_X64=$SHA512_WIN_X64" >> $GITHUB_OUTPUT
           echo "SHA512_WIN_X86=$SHA512_WIN_X86" >> $GITHUB_OUTPUT
           echo "SHA512_LINUX_X64_GNU=$SHA512_LINUX_X64_GNU" >> $GITHUB_OUTPUT
@@ -270,6 +289,15 @@ jobs:
           echo "SHA512_LINUX_ARM64_MUSL=$SHA512_LINUX_ARM64_MUSL" >> $GITHUB_OUTPUT
           echo "SHA512_MACOS_X64=$SHA512_MACOS_X64" >> $GITHUB_OUTPUT
           echo "SHA512_MACOS_ARM64=$SHA512_MACOS_ARM64" >> $GITHUB_OUTPUT
+
+          echo "Windows x64 SHA256: $SHA256_WIN_X64"
+          echo "Windows x86 SHA256: $SHA256_WIN_X86"
+          echo "Linux x64 GNU SHA256: $SHA256_LINUX_X64_GNU"
+          echo "Linux x64 MUSL SHA256: $SHA256_LINUX_X64_MUSL"
+          echo "Linux ARM64 GNU SHA256: $SHA256_LINUX_ARM64_GNU"
+          echo "Linux ARM64 MUSL SHA256: $SHA256_LINUX_ARM64_MUSL"
+          echo "macOS x64 SHA256: $SHA256_MACOS_X64"
+          echo "macOS ARM64 SHA256: $SHA256_MACOS_ARM64"
 
           echo "Windows x64 SHA512: $SHA512_WIN_X64"
           echo "Windows x86 SHA512: $SHA512_WIN_X86"
@@ -283,72 +311,24 @@ jobs:
       - name: Create release notes
         run: |
           cat > release-notes.md << 'NOTES_EOF'
-          # libdatadog-dotnet Release ${{ steps.setup_release.outputs.RELEASE_TAG }}
-
-          Custom libdatadog binaries for dd-trace-dotnet.
-
-          ## Components
-
-          - **libdatadog version**: ${{ needs.build.outputs.libdatadog_version }}
-          - **datadog-profiling-ffi**: Profiling FFI library
-
-          ## Artifacts
-
-          ### Windows
-          - `libdatadog-x64-windows.zip` - Windows x64 binaries (SHA512: ${{ steps.create_archives.outputs.SHA512_WIN_X64 }})
-          - `libdatadog-x86-windows.zip` - Windows x86 binaries (SHA512: ${{ steps.create_archives.outputs.SHA512_WIN_X86 }})
-
-          ### Linux
-          - `libdatadog-x86_64-unknown-linux-gnu.tar.gz` - Linux x64 (glibc) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_X64_GNU }})
-          - `libdatadog-x86_64-alpine-linux-musl.tar.gz` - Linux x64 (musl/Alpine) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_X64_MUSL }})
-          - `libdatadog-aarch64-unknown-linux-gnu.tar.gz` - Linux ARM64 (glibc) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_GNU }})
-          - `libdatadog-aarch64-alpine-linux-musl.tar.gz` - Linux ARM64 (musl/Alpine) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_MUSL }})
-
-          ### macOS
-          - `libdatadog-x86_64-apple-darwin.tar.gz` - macOS x64 (Intel) (SHA512: ${{ steps.create_archives.outputs.SHA512_MACOS_X64 }})
-          - `libdatadog-aarch64-apple-darwin.tar.gz` - macOS ARM64 (Apple Silicon) (SHA512: ${{ steps.create_archives.outputs.SHA512_MACOS_ARM64 }})
-
-          ## Usage
-
-          ### Windows x64
-          Update your vcpkg portfile to reference this release:
-          ```cmake
-          set(LIBDATADOG_VERSION ${{ steps.setup_release.outputs.RELEASE_TAG }})
-          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x64-windows.zip")
-          set(LIBDATADOG_HASH "${{ steps.create_archives.outputs.SHA512_WIN_X64 }}")
-          ```
-
-          ### Windows x86
-          Update your vcpkg portfile to reference this release:
-          ```cmake
-          set(LIBDATADOG_VERSION ${{ steps.setup_release.outputs.RELEASE_TAG }})
-          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86-windows.zip")
-          set(LIBDATADOG_HASH "${{ steps.create_archives.outputs.SHA512_WIN_X86 }}")
-          ```
-
-          ### Linux x64 (glibc)
-          ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86_64-unknown-linux-gnu.tar.gz
-          echo "${{ steps.create_archives.outputs.SHA512_LINUX_X64_GNU }}  libdatadog-x86_64-unknown-linux-gnu.tar.gz" | sha512sum -c
-          ```
-
-          ### Linux x64 (musl/Alpine)
-          ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86_64-alpine-linux-musl.tar.gz
-          echo "${{ steps.create_archives.outputs.SHA512_LINUX_X64_MUSL }}  libdatadog-x86_64-alpine-linux-musl.tar.gz" | sha512sum -c
-          ```
-
-          ### Linux ARM64 (glibc)
-          ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-aarch64-unknown-linux-gnu.tar.gz
-          echo "${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_GNU }}  libdatadog-aarch64-unknown-linux-gnu.tar.gz" | sha512sum -c
-          ```
-
-          ### Linux ARM64 (musl/Alpine)
-          ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-aarch64-alpine-linux-musl.tar.gz
-          echo "${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_MUSL }}  libdatadog-aarch64-alpine-linux-musl.tar.gz" | sha512sum -c
-          ```
+          SHA256 checksums
+          ${{ steps.create_archives.outputs.SHA256_MACOS_ARM64 }} libdatadog-aarch64-apple-darwin.tar.gz
+          ${{ steps.create_archives.outputs.SHA256_LINUX_ARM64_MUSL }} libdatadog-aarch64-alpine-linux-musl.tar.gz
+          ${{ steps.create_archives.outputs.SHA256_LINUX_ARM64_GNU }} libdatadog-aarch64-unknown-linux-gnu.tar.gz
+          ${{ steps.create_archives.outputs.SHA256_WIN_X64 }} libdatadog-x64-windows.zip
+          ${{ steps.create_archives.outputs.SHA256_WIN_X86 }} libdatadog-x86-windows.zip
+          ${{ steps.create_archives.outputs.SHA256_MACOS_X64 }} libdatadog-x86_64-apple-darwin.tar.gz
+          ${{ steps.create_archives.outputs.SHA256_LINUX_X64_MUSL }} libdatadog-x86_64-alpine-linux-musl.tar.gz
+          ${{ steps.create_archives.outputs.SHA256_LINUX_X64_GNU }} libdatadog-x86_64-unknown-linux-gnu.tar.gz
+          SHA512 checksums
+          ${{ steps.create_archives.outputs.SHA512_MACOS_ARM64 }} libdatadog-aarch64-apple-darwin.tar.gz
+          ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_MUSL }} libdatadog-aarch64-alpine-linux-musl.tar.gz
+          ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_GNU }} libdatadog-aarch64-unknown-linux-gnu.tar.gz
+          ${{ steps.create_archives.outputs.SHA512_WIN_X64 }} libdatadog-x64-windows.zip
+          ${{ steps.create_archives.outputs.SHA512_WIN_X86 }} libdatadog-x86-windows.zip
+          ${{ steps.create_archives.outputs.SHA512_MACOS_X64 }} libdatadog-x86_64-apple-darwin.tar.gz
+          ${{ steps.create_archives.outputs.SHA512_LINUX_X64_MUSL }} libdatadog-x86_64-alpine-linux-musl.tar.gz
+          ${{ steps.create_archives.outputs.SHA512_LINUX_X64_GNU }} libdatadog-x86_64-unknown-linux-gnu.tar.gz
           NOTES_EOF
 
           echo "Release notes created:"
